# keyboard-framework

./: .gitconfig-agent  .gitignore  2026-03-17-084332-skills-feature-brainstorming.txt  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.backup  CMakeLists.txt  README.MD  ai开发键盘固件流程.txt  main.c  simple_uart_test.c  test_main.c  test_uart_demo.c
.claude/: settings.local.json
.claude/agents/: cmake-build-tester.md  git-branch-reviewer.md
DOCS/: AI Coding.md  KB04122_temp.md  KB04122电子定义书V4-20250529.docx  N0046_indicator_test_plan.md  N0046_output.md  N0046_sleep_strategy.md  N0046_功能清单.md  N0046_原理图.md  N0046_硬件配置.md  N0046电子定义书V5-20250920.docx  TRI_MODE_COMMUNICATION_FLOW.md  indicator_refactor_design.md  key-functionality.md  prompts.md  system_init_startup_flow.md
DOCS/code_demo/: 2860sdk.xml  KB04122-13A-WCH_code.xml  KB04122-13A-WCH_sleep_analysis.md  pcl004-ch59x.xml
DOCS/conversation/: prompt.md  prompts.md
DOCS/design/: claude-code-complete-guide.md  config-migration-guide.md  hw-timer-implementation-plan.md  implementation-plan.md  indicator-refactoring-architecture.md  keyboard-middleware-analysis.md  wireless_driver_split_design.md
DOCS/kb904/: KB904_功能清单.md  KB904_原理图.md  KB904硬件网表图.tel  蓝牙妙控电子方案定义书V0.docx
DOCS/knowledge/: 3mode-communication-flow.md  KB04122-13A硬件原理图.tel  KB04122_功能清单.md  N0046_功能清单.md  Skill 创建.md
DOCS/plans/: 2025-03-09-claude-code-training-design.md  2025-03-11-communication-init-refactor-design.md  2025-03-11-communication-init-refactor.md  2026-01-23-keyboard-simplified.md  2026-01-25-n0046-firmware-design.md  2026-01-25-n0046-implementation-plan.md  2026-01-27-touchpad-integration-design.md  2026-03-05-ch584-ble-debug-design.md  2026-03-05-ch584-ble-debug-implementation-plan.md  2026-03-06-ch584-eeprom-hal-design.md  2026-03-06-ch584-eeprom-hal-implementation.md  2026-03-06-n0046-firmware-development-design.md  2026-03-06-n0046-implementation-plan.md  2026-03-09-ble-wt-state-alignment-fix-design.md  2026-03-09-claude-code-training-speech.md  2026-03-10-ch584-bluetooth-driver-design.md  2026-03-10-ch584-bluetooth-driver-implementation.md  2026-03-12-matrix-scan-mainloop-design.md  2026-03-12-matrix-scan-mainloop-implementation-plan.md  2026-03-12-matrix-scan-refactor-design.md  2026-03-12-matrix-scan-refactor-implementation.md  2026-03-12-system-based-layer-switch-design.md  2026-03-12-system-based-layer-switch.md  2026-03-12-timer-read32-accuracy-fix-design.md  2026-03-16-n0046-sleep-implementation-plan.md  2026-03-16-n0046-sleep-strategy-feasibility.md  2026-03-17-indicator-event-driven-design.md  2026-03-17-indicator-test-design.md  2026-03-17-kb904-design.md  2026-03-17-kb904-requirements.md  2026-03-17-shared-fn-earth-key-requirements.md  2026-03-19-keyboards-config-refactor-design.md  2026-03-19-keyboards-config-refactor-requirements.md  2026-03-19-system-init-refactor-design.md  2026-03-19-system-init-refactor-requirements.md  2026-03-21-consumer-usages-completion-design.md  2026-03-21-country-code-design.md  2026-03-21-gpio-interrupt-management-design.md  2026-03-21-gpio-interrupt-management-requirements.md  2026-03-21-system-events-optimization-design.md  (+40 more)
application/: hidkbd.c  main.c  sys_config.h  sys_error.h
application/service/: communication_service.c  communication_service.h  input_service.c  input_service.h  output_service.c  output_service.h  system_service.c  system_service.h  wireless_callbacks.c
application/system/: indicator_test.c  indicator_test.h  system_init.c  system_init.h
code_example/: tmos.md
component/: pct1336_driver.c  touchpad_service.c
component/include/: mcs_gesture.h  pct1336_driver.h  touchpad_service.h
component/ota_component/: .gitignore  AES128.c  AES128.h  Inateck_ProductCatalog.h  Inateck_ota.c  Inateck_ota.h  Inateck_tag.c  Inateck_tag.h  README.md  crc16.c  crc16.h  debug_log.h
component/touch_component/: README.md  bayes_filtering.c  mcs_gesture.c  pct1336_driver.c  touchpad_service.c
docs/plans/: 2026-03-20-touchpad-middleware-design.md  2026-03-20-touchpad-middleware-requirements.md  2026-03-21-kb-sys-action-events-design.md  2026-03-21-kb-sys-action-events-requirements.md
drivers/: communication_interface.h  input_interface.h  output_interface.h  storage_interface.h  system_interface.h
drivers/ota/: Inateck_tag_config.c  Inateck_tag_config.h  ota_storage.c  ota_storage.h
drivers/power/: battery.c  battery.h  power_config.h
drivers/storage/: CH584_EEPROM_Driver.md  README.md  eeprom.h  storage.c  storage.h
drivers/system/: atomic_util.h  event_manager.h  timer.c  timer.h  timer_manager.c  timer_manager.h  wait.h
examples/: storage_example.c  wireless_driver_example.c
hal/: adc.h  gpio.h  hw_timer.h  i2c_master.h  pin_mapper.h  power.h  pwm.h  system_hal.h  uart.h  wait.h  watchdog.h
keyboards/: ble_adv_policy.h  config_check.h  country_codes.h  default_keymap.c  indicator_config.h  product_config.h  system_enums.h
keyboards/defaults/: backlight_defaults.h  ble_defaults.h  indicator_defaults.h  keyboard_defaults.h  matrix_defaults.h  power_defaults.h
keyboards/kb904/: README.md  config.h  config_hw.h  config_product.h  indicator.c
keyboards/keymaps/: default_keymap.h  layout_8x16.h  layout_jis_113.h
keyboards/n0046/: config.h  config_gpio.h  config_led.h  config_matrix.h  n0046.c  rules.mk
memory-bank/: application-layer-analysis.md  architecture.md  backlight-refactoring-plan.md  claude-code-advanced-tips.md  claude-code-complete-guide.md  indicator-architecture-analysis.md  keyboard-simplified-design.md  prompt.md
middleware/: keyboard.h  键盘中间件实现总结.md
middleware/communication/: PMU.c  PMU.h  host.c  host.h  host_driver.h  lpm.c  lpm.h  report_buffer.c  report_buffer.h  transport.c  transport.h  wireless.c  wireless.h  wireless_callbacks.c  wireless_event_type.h
middleware/config/: config_loader.h  config_manager.h  config_validator.h
middleware/keyboard/: README.md  action.c  action.h  (+36 more)
openspec/: project.md
test/: mingw-toolchain.cmake  storage_test.c
utils/: AES128.c  AES128.h  crc16.h  linkedlist.c  linkedlist.h  util.h  utils.h
(+213 files in other folders)
